# ss

./: .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.h  Enums.h  Instruction.cpp  Instruction.h  LICENSE  Operand.cpp  Operand.h  README.md  SectionType.h  Symbol.cpp  Symbol.h  main.cpp  ostreamDefinitions.cpp
assembly_tests/: badFormat  defaultIVT.asm  test  test.asm  testBss.asm  testEmu1.asm  testEmu2.asm  testFirstPass  testHelloWorld  testHelloWorld.asm  testInfinity.asm  testLabels.asm  testRelocation.asm  testRelocation1.asm  testRelocation2.asm  testSecondPass  testStack
common/: Enums.h  Instruction.cpp  Instruction.h  Relocation.cpp  Relocation.h  Section.cpp  Section.h  Symbol.cpp  Symbol.h  ostreamDefinitions.cpp
compiler/: Compiler.cpp  Compiler.h  Enums.h  Instruction.cpp  Operand.h  Relocation.cpp  Relocation.h  Section.cpp  Section.h  Symbol.cpp  Symbol.h  ostreamDefinitions.cpp
emulator/: Emulator.cpp  Emulator.h  Program.cpp  Program.h  main.cpp
linker/: Linker.cpp  Linker.h  LoaderScriptFile.cpp  LoaderScriptFile.h  ObjectFile.cpp  ObjectFile.h  main.cpp
predaja/: CMakeLists.txt  compEmu.sh  ubuntu.txt
predaja/doc/: doc.doc
predaja/src/assembler/h/: Compiler.h
predaja/src/assembler/src/: Compiler.cpp  Operand.cpp  main.cpp
predaja/src/common/h/: Enums.h
predaja/src/common/src/: Relocation.cpp  Section.cpp  Symbol.cpp  ostreamDefinitions.cpp
predaja/src/emulator/h/: Emulator.h  Linker.h  Loader.h  LoaderConf.h  Program.h
predaja/src/emulator/src/: Emulator.cpp  Linker.cpp  Loader.cpp  LoaderScriptFile.cpp  Program.cpp  main.cpp
predaja/tests/: badDirective.asm  badFormat2.asm  badInstruction.asm  badOperands.asm  testEmpty.output  testEmu1.asm  testEmu1.output  testEmu2.asm  testEmu3.asm  testIntr.asm  testIntr.output  testRelocation1.asm  testRelocation1.output  testRelocation2.asm  testScript.asm  testScript.script
